tests/sumo/spec/departure/errors/depart_unsorted/log.sumo
Loading net-file from 'net.net.xml' ... done (0ms).
Loading additional-files from 'input_routes.rou.xml' ... done (1ms).
Loading route-files incrementally from 'input_additional.add.xml'
Loading done.
Simulation version v1_23_1+0585-24e5b338460 started with time: 0.00.
Warning: Route file should be sorted by departure time, ignoring 'b'!
Warning: Teleporting vehicle 'd'; waited too long (blocked), lane='beg_2', time=78.00.
Warning: Vehicle 'd' ends teleporting on edge 'end', time=78.00.
Simulation ended at time: 160.00.
Reason: All vehicles have left the simulation.
